Fix foreground background color contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,8 @@ body {
   padding: 0;
   text-align: center;
   font-family: 'Open Sans', sans-serif;
-  color: #3A6355;
+  /*color: #3A6355;*/
+  color: #369069;
   background: #2d2b30;
 }
 
@@ -16,12 +17,13 @@ body {
 
 a {
   text-decoration: none;
-  color: #999;
+  /*color: #999;*/
+  color: white;
 }
 
-a:hover {
+/*a:hover {
   color: #999;
-}
+}*/
 
 /* Section Styles */
 
@@ -64,7 +66,7 @@ a:hover {
 
 header {
   text-align: center;
-  background: url('../img/concert02_with_text.jpg') no-repeat top center ;
+  background: url('../img/concert02b_with_text.jpg') no-repeat top center ;
   background-size: cover;
   overflow: hidden;
   padding-top: 60px;
@@ -95,7 +97,8 @@ header .name{
   margin: 30px;
   padding: 20px 40px 40px;
   text-align: left;
-  border-top: 4px solid #781125;
+  /*border-top: 4px solid #781125;*/
+  border-top: 4px solid #369069;
   clear: both;
 }
 .card:hover {
@@ -120,7 +123,8 @@ header .name{
 .heading{
   font-size: 2em;
   text-transform: uppercase;
-  color: #781125;
+  /*color: #781125;*/
+  color: white;
   margin-top: 10px;
 }
 
